--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,6 +15,12 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@root/*": ["./*"],
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
