--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -13,6 +13,12 @@
     "moduleDetection": "force",
     "noEmit": true,
 
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@root/*": ["./*"],
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
